src/test/ui/half-open-range-patterns/exclusive_range_pattern_syntax_collision.stderr
error[E0308]: mismatched types
  --> $DIR/exclusive_range_pattern_syntax_collision.rs:6:13
   |
LL |         [_, 99.., _] => {},
   |             ^^ expected struct `std::ops::Range`, found integer
   |
   = note: expected struct `std::ops::Range<{integer}>`
                found type `{integer}`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
